# rumah-kuota

./: .gitattributes  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
backend/otomax/: hardware.html  modules.html
docs/: index.md
docs/backend/otomax/: hardware.md  modules.md
docs/backend/server/: otomax.md
docs/network/: jaringan.md
network/: jaringan.html
search/: search_index.js  search_index.json
