[project]
name = "kas-digital-docs"
version = "0.1.0"
description = "Dokumentasi komprehensif untuk kas Digital."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-material>=9.7.1",
    "mkdocstrings>=1.0.0",
    "yamllint>=1.37.1",
]

authors = [
    { name = "Hasan Maki", email = "hasanmaki.ahmad@gmail.com" }
    ]
